use_mit_license()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,7 @@ Authors@R:
 Description: This is a (mostly) drop-in replacement for stringr, but it has
     no dependencies. This makes it suitable for use in packages where stringr's
     stringi dependency would otherwise be unwieldy.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
