Implement str_detect

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
+Suggests: 
+    testthat (>= 2.1.0)
+RoxygenNote: 7.0.2
