--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(fixed)
 export(perl)
 export(regex)
 export(str_detect)
+export(str_extract)
+export(str_extract_all)
 export(str_locate)
 export(str_locate_all)
 export(str_sub)
