--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,5 @@ Roxygen: list(markdown = TRUE)
 Suggests: 
     testthat (>= 2.1.0)
 RoxygenNote: 7.0.2
+URL: https://github.com/hadley/stringb
+BugReports: https://github.com/hadley/stringb/issues
