use_github_actions_tidy()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    covr
 RoxygenNote: 7.0.2
 URL: https://github.com/hadley/stringb
 BugReports: https://github.com/hadley/stringb/issues
