Implement str_replace()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,6 @@ export(str_extract)
 export(str_extract_all)
 export(str_locate)
 export(str_locate_all)
+export(str_replace)
+export(str_replace_all)
 export(str_sub)
